--- a/styles.css
+++ b/styles.css
@@ -3,77 +3,60 @@ body {
     font-optical-sizing: auto;
     font-style: normal;
     height: 100vh;
+    width: 100vw;
     display: flex;
-    margin: 0 auto;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #1F2937;
     margin: 0;
-    height: 4rem;
-}
-
-.footer {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-}
-
-.logo,
-.footer {
-    font-size: 1.5rem;
-    background-color: #1F2937;
-    color: #F9FAF8;
-}
-
-.footer p {
-    font-size: 0.7rem;
-}
-
-.logo {
+    flex-direction: column;
     justify-content: flex-start;
-    font-weight: bold;
-    text-wrap-mode: nowrap;
+    align-items: stretch;
 }
 
-.navigation {
-    justify-content: flex-end;
-}
-
-.logo, 
-.navigation {
-    display: flex;
-}
-
-
+/* Activation Flexbox Horizontal */
+.header,
+.footer,
 .hero {
     display: flex;
-    justify-content: space-between;
-    padding: 4rem 0rem;
-}
-.hero-text-section {
- 
+    justify-content: center;
+    align-items: center;
+    gap: 10vw;
+    margin: 0px;
 }
 
-.hero-image-section {
-
-
-}
+/* Activation Flexbox Vertical */
 .content {
     display: flex;
     flex-direction: column;
-    flex:1;
-    background-color: #1F2937;
-    color: #F9FAF8;
-    width: 1290px;
+    justify-content: space-around;
+    flex: 1;
 }
 
+/*  Activation Stretching Vertical des sections */
+.section {
+    flex: 1;
+}
+
+/* Flexbox Centre */
+.footer {
+    justify-content: center;
+}
+
+/* Couleur de fond */
+.header,
+.footer,
+.hero {
+    color: #e5e7eb;
+    background-color:#1F2937 ;
+}
+
+/* Padding */
+.header,
+.hero {
+    padding: 1rem 1.5rem;
+}
+.logo {
+    font-size: 48px;
+    font-weight: 700;
+}
 ul {
     display: flex;
     margin: 0;
@@ -88,12 +71,13 @@ a {
     font-size: 18px;
     text-wrap-mode: nowrap;
 }
-
+.hero p {
+    width: 350px;
+}
 img {
     height: 300px;
     width: auto;
 }
-
 button.signup {
     background-color: #3882F6;
     color: #fcfdfe;
